k8s/route-spring-boot-com-mysql-git.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2022-07-11T23:56:14Z"
  labels:
    app: spring-boot-com-mysql-git
    app.kubernetes.io/component: spring-boot-com-mysql-git
    app.kubernetes.io/instance: spring-boot-com-mysql-git
    app.kubernetes.io/name: spring-boot-com-mysql-git
    app.kubernetes.io/part-of: spring-boot-com-mysql-git-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-17-ubi8
  name: spring-boot-com-mysql-git
  namespace: grupo23
  resourceVersion: "150260"
  uid: a0f15132-705f-46d4-bb7a-b61a433165a1
spec:
  host: spring-boot-com-mysql-git-grupo23.apps.cluster-bwzd2.bwzd2.sandbox730.opentlc.com
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: spring-boot-com-mysql-git
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2022-07-11T23:56:14Z"
      status: "True"
      type: Admitted
    host: spring-boot-com-mysql-git-grupo23.apps.cluster-bwzd2.bwzd2.sandbox730.opentlc.com
    routerCanonicalHostname: router-default.apps.cluster-bwzd2.bwzd2.sandbox730.opentlc.com
    routerName: default
    wildcardPolicy: None
