k8s/svc-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
    template.openshift.io/expose-uri: mysql://{.spec.clusterIP}:{.spec.ports[?(.name=="mysql")].port}
  creationTimestamp: "2022-07-11T23:30:12Z"
  labels:
    app: mysql-persistent
    app.kubernetes.io/component: mysql-persistent
    app.kubernetes.io/instance: mysql-persistent
    template: mysql-persistent-template
  name: mysql
  namespace: grupo23
  resourceVersion: "141339"
  uid: d03620e5-e0d2-4158-8a70-ff5c284d28d5
spec:
  clusterIP: 172.30.113.21
  clusterIPs:
  - 172.30.113.21
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    name: mysql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
